--- a/ATM/ATM/Views/Accounts/Delete.cshtml
+++ b/ATM/ATM/Views/Accounts/Delete.cshtml
@@ -83,6 +83,14 @@
             @Html.DisplayFor(model => model.cardNO)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.User.userName)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.User.userName)
+        </dd>
+
     </dl>
 
     @using (Html.BeginForm()) {
