--- a/ATM/ATM/Views/Accounts/Details.cshtml
+++ b/ATM/ATM/Views/Accounts/Details.cshtml
@@ -82,6 +82,14 @@
             @Html.DisplayFor(model => model.cardNO)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.User.userName)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.User.userName)
+        </dd>
+
     </dl>
 </div>
 <p>
