--- a/ATM/ATM/Views/Accounts/Index.cshtml
+++ b/ATM/ATM/Views/Accounts/Index.cshtml
@@ -38,6 +38,9 @@
         <th>
             @Html.DisplayNameFor(model => model.cardNO)
         </th>
+        <th>
+            @Html.DisplayNameFor(model => model.User.userName)
+        </th>
         <th></th>
     </tr>
 
@@ -69,6 +72,9 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.cardNO)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.User.userName)
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.accountID }) |
